# nix-poetry-testing

./: flake.nix  packages.json  packages.json_bak  packages_small.json  pyproject.toml  script.sh  uninstallable_packages
.github/workflows/: main.yml  test_nix.yml  test_poetry.yml
