[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
mypy-boto3-s3 = "^1.18.36"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"